# threeEarth

./: .gitattributes  .gitignore  Manifest.toml  Project.toml  package.json  pyproject.toml  vite.config.js
src/: Connection.js  atmo.js  index.html  script.js
src/Visualizer/: Earth.js  TextureManager.js  Visualizer.js  VizTools.js
src/dev/: app.py  cameracontrols.js  earthsat.js  run_server.py  simple_socket.js
src/server/: client.js  server.ipynb  server.jl  server.py  three.jl
src/shaders/: fragments.glsl
src/shaders/atmo/: GroundFromSpace.frag  GroundFromSpace.vert  SkyFromSpace.frag  SkyFromSpace.vert
src/shaders/glow/: vertex.glsl
src/threepy/: animations.py  core.py  geometry.py  materials.py  objects.py  server.py  visualizer.py
static/textures/earth/: earth_color_10K.tif  earth_nightlights_10K.tif  earth_roughness.tif
static/textures/stars/: starmap_2020_16k_gal.exr
